RESOLVED FIXED 248322
Wrong caret position in some form controls in vertical writing-mode + RTL
https://bugs.webkit.org/show_bug.cgi?id=248322
Summary Wrong caret position in some form controls in vertical writing-mode + RTL
Tim Nguyen (:ntim)
Reported 2022-11-24 13:53:17 PST
See: https://bugs.webkit.org/attachment.cgi?id=463717 Notably the textarea, number input and password inputs. (This is with VerticalFormControlsEnabled on)
Attachments
Radar WebKit Bug Importer
Comment 1 2022-11-24 13:53:26 PST
Aditya Keerthi
Comment 2 2023-11-13 11:17:11 PST
EWS
Comment 3 2023-11-14 08:32:14 PST
Committed 270707@main (3931fcef84e4): <https://commits.webkit.org/270707@main> Reviewed commits have been landed. Closing PR #20427 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.