Incorrect caret position in empty elements with a vertical writing mode https://bugs.webkit.org/show_bug.cgi?id=248322 rdar://102652127

Reviewed by Tim Nguyen.

Caret rect computation for empty elements does not fully account for vertical
writing mode. Fix by consistently using logical values.

* LayoutTests/editing/selection/caret-in-empty-block-vertical-horizontal-rtl-text-indent-padding-expected.txt: Added.
* LayoutTests/editing/selection/caret-in-empty-block-vertical-horizontal-rtl-text-indent-padding.html: Added.
* LayoutTests/editing/selection/caret-in-empty-block-vertical-rl-rtl-expected.txt: Added.
* LayoutTests/editing/selection/caret-in-empty-block-vertical-rl-rtl.html: Added.
* LayoutTests/editing/selection/caret-in-empty-inline-vertical-rl-rtl-expected.txt: Added.
* LayoutTests/editing/selection/caret-in-empty-inline-vertical-rl-rtl.html: Added.
* Source/WebCore/rendering/CaretRectComputation.cpp:
(WebCore::computeCaretRectForEmptyElement):
(WebCore::computeCaretRectForBlock):
(WebCore::computeCaretRectForInline):
* Source/WebCore/rendering/RenderBoxModelObject.h:
* Source/WebCore/rendering/RenderBoxModelObjectInlines.h:
(WebCore::RenderBoxModelObject::borderAndPaddingLogicalHeight const):
(WebCore::RenderBoxModelObject::borderAndPaddingLogicalLeft const):
(WebCore::RenderBoxModelObject::borderAndPaddingLogicalRight const):
(WebCore::RenderBoxModelObject::borderAndPaddingEnd const):

Canonical link: https://commits.webkit.org/270707@main